# coro_redis

./: .gitignore  .gitmodules  AStyle.bat  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  cmake_build_x64-v142.bat  cmake_build_x64-v143.bat  cmake_build_x64_linux.sh  cmake_build_x86-v143.bat
doc/: index.md
docs/: annotated.html  classcoro__redis_1_1client-members.html  classcoro__redis_1_1client.html  classcoro__redis_1_1connection.html  classcoro__redis_1_1coro__connection-members.html  classcoro__redis_1_1coro__connection.html  classcoro__redis_1_1impl_1_1client__impl-members.html  classcoro__redis_1_1impl_1_1client__impl.html  classcoro__redis_1_1sync__connection-members.html  classcoro__redis_1_1sync__connection.html  classcoro__redis_1_1task-members.html  classcoro__redis_1_1task.html  classcoro__redis_1_1task__promise-members.html  classcoro__redis_1_1task__promise.html  classes.html  client_8hpp_source.html  config_8hpp_source.html  connection_8hpp_source.html  context_8hpp_source.html  coro__connection_8hpp_source.html  dir_7f7a3623a6ac345ecd1f5479fc3ac129.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_h.html  functions_func_i.html  functions_func_l.html  functions_func_m.html  (+36 more)
docs/html/: classcoro__redis_1_1client-members.html  classcoro__redis_1_1connection-members.html  classcoro__redis_1_1impl_1_1connection__impl-members.html  classcoro__redis_1_1impl_1_1connection__impl.html  classcoro__redis_1_1task__promise_3_01void_01_4-members.html  classcoro__redis_1_1task__promise_3_01void_01_4.html  classcoro__redis_1_1task__promise__base-members.html  classcoro__redis_1_1task__promise__base.html  client_8hpp_source.html  dir_7f7a3623a6ac345ecd1f5479fc3ac129.html  functions.html  functions_func.html  menudata.js  structcoro__redis_1_1impl_1_1timeval__t-members.html  structcoro__redis_1_1impl_1_1timeval__t.html  structcoro__redis_1_1is__string-members.html  structcoro__redis_1_1is__string.html  structcoro__redis_1_1nothing.html  structcoro__redis_1_1void__to__nothing_3_01void_01_4-members.html  structcoro__redis_1_1void__to__nothing_3_01void_01_4.html
docs/html/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_5.js  all_6.js  all_8.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  functions_1.js  functions_2.js  functions_5.js  functions_6.js  functions_9.js  functions_d.js  functions_f.js  searchdata.js
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+6 more)
examples/100/: CMakeLists.txt
examples/100/src/: main.cpp
examples/101/: CMakeLists.txt
examples/101/src/: main.cpp
examples/200/: CMakeLists.txt
examples/200/src/: main.cpp  reids_client.cpp  reids_client.h  watchdog.cpp  watchdog.h
examples/300/: CMakeLists.txt
examples/300/src/: coro_task.h  main.cpp
examples/301/: CMakeLists.txt
examples/301/src/: coro_task.h  main.cpp  reids_client.h  watchdog.cpp  watchdog.h
examples/302/: CMakeLists.txt
examples/302/src/: coro_task.h  main.cpp  reids_client.cpp  reids_client.h  watchdog.cpp  watchdog.h
examples/303/: CMakeLists.txt
examples/303/src/: main.cpp  test.cpp  test.h
examples/utils/: cmdline.hpp  logger.hpp  watchdog.cpp.bak  watchdog.h.bak
include/: cmdline.hpp  coro_redis.hpp  logger.hpp
include/coro_redis/: client.hpp  client.ipp  config.hpp  connection.hpp  connection.ipp  context.hpp  coro_connection.hpp  sync_connection.hpp  task.hpp
include/coro_redis/impl/: client.ipp  config.ipp  coro_connection.ipp  sync_connection.ipp  task.ipp
